--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: '>=2.17.0 <3.0.0'
 
 dependencies:
+ web_socket_channel: ^2.2.0
  json_annotation: ^4.6.0
  freezed_annotation: ^2.0.3
 
